# ITI_ModernCPP_Playground

./: README.md
CPP_Task1/: GPIO_Cfg.h  README.md
Task1_GPIO_Driver_Migration_to_C++/: GPIO.c  GPIO_Interface.h  GPIO_Private.h  README.md
Task2_ Resource Management/: README.md  a.out  main.cpp
Task3_C++_OOP_GPIO_ControlForRaspberryPi3/: README.md  REDDME.md  a.out  demo.cpp  gpio.cpp  test_app
Task4_PiClimate_Monitor/: README.md  main1.cpp  test.cpp
Task5_Pi-7-Seg-Display-Controller/: CMakeLists.txt  README.md
Task5_Pi-7-Seg-Display-Controller/app/: main.cpp
Task5_Pi-7-Seg-Display-Controller/include/: IStream.hpp  OStream.hpp  SevenSegment.hpp  Stream.hpp  gpio.hpp  terminal.hpp
Task5_Pi-7-Seg-Display-Controller/src/: IStream.cpp  SevenSegment.cpp  Stream.cpp  gpio.cpp  terminal.cpp
